fix(ControlBar): hide volume slider on mobile

--- a/src/routes/Player/ControlBar/styles.less
+++ b/src/routes/Player/ControlBar/styles.less
@@ -91,6 +91,10 @@
             padding: 0 0.5rem;
             overflow: visible;
 
+            .volume-slider {
+                display: none;
+            }
+
             .control-bar-buttons-menu-button {
                 display: flex;
             }
